--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   web:
+    image: 192.168.100.29:5000/hansol/initicube:1.0.0
     build:
       context: .
       dockerfile: ./Dockerfile
