remove endpoint host
run on docker to fix issue libs version linux server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,8 @@ services:
     volumes:
       - .:/app
     restart: always
+
+  ubuntu:
+    build:
+      context: .
+      dockerfile: ./Dockerfile_ubuntu
