--- a/Dockerfile.qatest
+++ b/Dockerfile.qatest
@@ -11,18 +11,26 @@ RUN apt-get update && apt-get install -y \
     vim \
     git \
     sudo \
-    python3 \
-    python3-pip \
     ca-certificates \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
+
+# Update the package list for python script
+RUN apt-get update && apt-get install -y \
+    python3 \
+    python3-pip \
+    build-essential \
+    libssl-dev \
+    libffi-dev \
+    python3-dev
 
 # Set the working directory
 WORKDIR /app
 
 # Install any needed packages specified in requirements.txt
 COPY requirements.txt /app/
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip3 install --no-cache-dir -r requirements.txt
+COPY . /app/
 
 # Set the default command to run on container start
 CMD ["bash", "-c", "tail -f /dev/null"]
