--- a/config/config.cfg
+++ b/config/config.cfg
@@ -1,7 +1,7 @@
 [SERVER]
 port = 8080
 mode = manual
-log_path = .
+log_path = ./data
 request_count = 10000
 request_failed_percent = 10
 request_no_response_percent = 10
