--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,9 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile.qatest
+
+  centos:
+    image: 192.168.100.29:5000/hansol/initcube_test:1.0.4_centos
+    build:
+      context: .
+      dockerfile: ./Dockerfile.centos
