add centos file
run on docker to fix issue libs version linux server

--- a/Dockerfile.qatest
+++ b/Dockerfile.qatest
@@ -24,6 +24,8 @@ RUN apt-get update && apt-get install -y \
     libffi-dev \
     python3-dev
 
+RUN apt-get install -y cmake
+
 # Set the working directory
 WORKDIR /app
 
