--- a/Dockerfile.centos
+++ b/Dockerfile.centos
@@ -33,7 +33,8 @@ RUN cd /opt/Python-3.10*/ && ./configure --enable-optimizations && make altinsta
 RUN pip3.10 install --upgrade pip
 
 # Install ssl
-RUN yum install openssl
+RUN yum group install -y "Development Tools"
+RUN yum install -y openssl cmake gcc
 
 # Set the working directory
 WORKDIR /app
