--- a/Dockerfile.qatest
+++ b/Dockerfile.qatest
@@ -26,6 +26,11 @@ RUN apt-get update && apt-get install -y \
 
 RUN apt-get install -y cmake
 
+# Install lib cmocka for unit test
+RUN wget https://cmocka.org/files/1.1/cmocka-1.1.7.tar.xz -P /opt
+RUN tar xvf /opt/cmocka-1.1.7.tar.xz -C /opt && rm -rf /opt/cmocka-1.1.7.tar.xz
+RUN cd /opt/cmocka-1.1*/ && mkdir build && cd build && cmake .. &&  make && make install
+
 # Set the working directory
 WORKDIR /app
 
